--- a/zd/MainWindow.xaml
+++ b/zd/MainWindow.xaml
@@ -12,6 +12,7 @@
                 <DataGridTextColumn Header="Id" Width="Auto" Binding="{Binding Id}"/>
                 <DataGridTextColumn Header="Name" Width="*" Binding="{Binding Name}"/>
                 <DataGridTextColumn Header="CountOfStars" Width="Auto" Binding="{Binding CountOfStars}"/>
+                <DataGridTextColumn Header="Image" Width="Auto"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
